[package]
name = "font-index"
version = "0.1.4"
authors = ["chad <cbrokaw@gmail.com>"]
edition = "2018"
description = "Static index for system fonts"
repository = "https://git.sr.ht/~declantsien/font-index"
license-file = "LICENSE"

[dependencies]
swash = "0.1"
memmap2 = "0.2.1"
once_cell = { version = "1.18.0", optional = true }
log = "0.4"

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "android"))))'.dependencies]
fontconfig-parser = "0.5"

[features]
default = [ "emacs" ]
emacs = ["dep:once_cell"]
