[package]
name = "font-index"
version = "0.2.0"
authors = ["chad <cbrokaw@gmail.com>"]
edition = "2018"
description = "Static index for system fonts"
repository = "https://git.sr.ht/~declantsien/font-index"
license-file = "LICENSE"

[dependencies]
memmap2 = "0.2.1"
once_cell = { version = "1.18.0", optional = true }
isolang = { version = "2", optional = true }
fancy-regex = { version = "0.11", optional = true }
log = "0.4"

[dependencies.swash]
git = "https://github.com/declantsien/swash.git"
branch = "webrender-fix"
default-features = false

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "android"))))'.dependencies]
fontconfig-parser = "0.5"

[features]
default = [ "emacs" ]
emacs = ["dep:once_cell", "dep:isolang", "dep:fancy-regex"]
